[package]
name = "file-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zstd = "0.13"
anyhow = "1"
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.13"
aws-credential-types = "1.1"
sled = "0.34"
md-5 = "0.10"
bincode = "1.3"
clap = { version = "4", features = ["derive", "env"] }
jsonwebtoken = "9"


[profile.release]
opt-level = "s"         # 优化体积（s < z，z更小但更慢）
lto = true              # 启用全局链接时优化（Link Time Optimization）
codegen-units = 1       # 单线程编译，最优优化结果（体积更小，编译更慢）
panic = "abort"         # 让panic直接中止程序，减少栈展开代码