[package]
name = "sean-rust-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
indicatif = "0.17.8"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.0", features = ["full"] }
sled = "0.34"
anyhow = "1.0"
regex = "1.0"

[[example]]
name = "db_local"
path = "src/examples/db_local.rs"

[[example]]
name = "loadtest"
path = "src/examples/loadtest.rs"

[[example]]
name = "cache_example"
path = "src/examples/cache_example.rs"

[[example]]
name = "graphql_example"
path = "src/examples/graphql_example.rs"

[[example]]
name = "curl_example"
path = "src/examples/curl_example.rs"
